--- a/JenkinsFile
+++ b/JenkinsFile
@@ -19,7 +19,7 @@ node {
 
     withCredentials([file(credentialsId: JWT_KEY_CRED_ID, variable: 'jwt_key_file')]) {
         stage('Get a record) {
-           $ sfdx force:data:record:get -s Account -w "Name='Universal Containers'"
+           script: "${toolbelt} force:data:record:get -s Account -w "Name='Universal Containers'""
         }
     }
 }
