--- a/JenkinsFile
+++ b/JenkinsFile
@@ -24,7 +24,7 @@ node {
     }
     
     withCredentials([file(credentialsId: JWT_KEY_CRED_ID, variable: 'jwt_key_file')]) {
-        stage('Get a record) {
+        stage('Get a record') {
            script: "${toolbelt} force:data:record:get -s Account -w "Name='Universal Containers'""
         }
     }
