--- a/JenkinsFile
+++ b/JenkinsFile
@@ -19,7 +19,7 @@ node {
     
     withCredentials([file(credentialsId: JWT_KEY_CRED_ID, variable: 'jwt_key_file')]) {
         stage('Get a record') {
-           acc = bat returnStdout: true, script: "${toolbelt} force:data:record:get -s Account -w "Name='Universal Containers'""
+           acc = bat returnStdout: true, script: "${toolbelt} force:data:record:get -s Account -w "Name=Acme""
            println acc
         }
     }
