--- a/JenkinsFile
+++ b/JenkinsFile
@@ -16,6 +16,9 @@ node {
     println CONNECTED_APP_CONSUMER_KEY
     def toolbelt = tool 'toolbelt'
     
+    stage('checkout source') {
+        checkout scm
+    }    
     
     withCredentials([file(credentialsId: JWT_KEY_CRED_ID, variable: 'jwt_key_file')]) {
         stage('Get a record') {
