--- a/JenkinsFile
+++ b/JenkinsFile
@@ -22,7 +22,7 @@ node {
     
     withCredentials([file(credentialsId: JWT_KEY_CRED_ID, variable: 'jwt_key_file')]) {
         stage('Get a record') {
-        rc = command "${toolbelt}/sfdx force:data:record:get -s Account -w "Name='Universal Containers'""   
+        def rc = sh(script: "${toolbelt} force:data:record:get -s Account -w "Name='Universal Containers'"", returnStdout: true)
         }
     }
 }
