--- a/JenkinsFile
+++ b/JenkinsFile
@@ -22,7 +22,7 @@ node {
     
     withCredentials([file(credentialsId: JWT_KEY_CRED_ID, variable: 'jwt_key_file')]) {
         stage('Get a record') {
-        def status = sh(returnStatus: true, script: "${toolbelt} force:data:record:create --s Account -v "Name=Dupa"")
+        def status = sh(returnStatus: true, script: "${sfdxHome}/sfdx force:data:record:create --s Account -v "Name=Dupa"")
             if(status != 0 ){
         error("Error during data insert to source sandbox.")
     } else {
