--- a/JenkinsFile
+++ b/JenkinsFile
@@ -20,9 +20,7 @@ node {
     }    
     
     stage('a'){
-        def response = sh(returnStdout: true,script: "set +x && curl -X GET -H \"Authorization: Bearer ${token}\" -H \"Content-Type: application/json; charset=UTF-8\" -H \"Accept: application/json\" https://mypmi.my.salesforce.com/services/data/v49.0/tooling/query/?q=Select+id,SandboxName,Description+from+SandboxInfo")
-    def sandboxes = readJSON text: response
-    return sandboxes
+    rc = sh returnStatus: true, script: "${sfdxHome}\sfdx force:data:record:get -s Account -i 0017Q000005CIF9QAO
     }
 
 }
