--- a/JenkinsFile
+++ b/JenkinsFile
@@ -20,7 +20,7 @@ node {
     }    
     
     stage('a'){
-    def rc = sh (returnStatus: true, script: "${sfdxHome} force:data:record:get -s Account -i 0017Q000005CIF9")
+    def rc = bat (returnStatus: true, script: "${sfdxHome} force:data:record:get -s Account -i 0017Q000005CIF9")
     }
 
 }
