--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,24 +1,25 @@
 node {
     def sfdxHome = tool 'sfdx'
+    
     def BUILD_NUMBER=env.BUILD_NUMBER
     def RUN_ARTIFACT_DIR="tests/${BUILD_NUMBER}"
+    
     def SFDC_USERNAME
-
     def HUB_ORG=env.HUB_ORG_DH
     def SFDC_HOST = env.SFDC_HOST_DH
     def JWT_KEY_CRED_ID = env.JWT_CRED_ID_DH
     def CONNECTED_APP_CONSUMER_KEY=env.CONNECTED_APP_CONSUMER_KEY_DH
 
-    println 'KEY IS' 
+    stage ('Print login info')
     println JWT_KEY_CRED_ID
     println HUB_ORG
     println SFDC_HOST
     println CONNECTED_APP_CONSUMER_KEY
    
     
-    stage('a'){
-    def rc = bat (returnStatus: true, script: "${sfdxHome}/sfdx force:data:record:get -s Account -i 0017Q000005CIF9")
-    print rc
+    stage('Get a record'){
+    def acc = bat (returnStatus: true, script: "${sfdxHome}/sfdx force:data:record:get -s Account -i 0017Q000005CIF9")
+    print acc
     }
 
 }
