--- a/JenkinsFile
+++ b/JenkinsFile
@@ -5,16 +5,19 @@ node {
     def RUN_ARTIFACT_DIR="tests/${BUILD_NUMBER}"
     
     def SFDC_USERNAME
-    def JWT_KEY_CRED_ID = env.JWT_CRED_ID_DH
     
     //username
-    def USR_NAME=env.USR_NAME
+    def HUB_ORG_DH=env.HUB_ORG_DH
+    //SF org URL
     def SFDC_HOST = env.SFDC_HOST_DH
+    //consumer key
     def CONNECTED_APP_CONSUMER_KEY=env.CONNECTED_APP_CONSUMER_KEY_DH
+    //credentials
+    def JWT_KEY_CRED_ID = env.JWT_CRED_ID_DH
 
     stage ('Print login info'){
     println JWT_KEY_CRED_ID
-    println USR_NAME
+    println HUB_ORG_DH
     println SFDC_HOST
     println CONNECTED_APP_CONSUMER_KEY
     }
