--- a/JenkinsFile
+++ b/JenkinsFile
@@ -22,4 +22,14 @@ node {
     print acc
     }
 
+    stage('Create a record'){
+    def con = bat (returnStatus: true, script: "${sfdxHome}/sfdx force:data:record:create -s Contact -v "Name='Fuck My Life'")
+    if (con!=0)
+    {
+    print "Big success"
+    } else {
+    "You are miserable"
+    }
+    }
+    
 }
