--- a/JenkinsFile
+++ b/JenkinsFile
@@ -19,14 +19,18 @@ node {
     
     stage('Get a record'){
     def acc = bat (returnStatus: true, script: "${sfdxHome}/sfdx force:data:record:get -s Account -i 0017Q000005CIF9")
+    if (acc!= 0){
     print acc
+    } else {
+    print "Error"
+    }
     }
 
     stage('Create a record'){
     def con = bat (returnStatus: true, script: "${sfdxHome}/sfdx force:data:record:create -s Account -v Name='Fuck My Life'")
     if (con!=0)
     {
-    print "Big success"
+    print "Great success"
     } else {
     "You are miserable"
     }
