--- a/JenkinsFile
+++ b/JenkinsFile
@@ -18,7 +18,7 @@ node {
     }
     
     stage('Get a record'){
-    def acc = bat (returnStatus: true, script: "${sfdxHome}/sfdx force:data:record:get -s Account -i 0017Q000005CIF9")
+    def acc = bat (returnStdout: true, script: "${sfdxHome}/sfdx force:data:record:get -s Account -i 0017Q000005CIF9")
     if (acc!= 0){
     print acc
     } else {
