--- a/JenkinsFile
+++ b/JenkinsFile
@@ -18,7 +18,7 @@ node {
     }
     
     stage('Get a record'){
-    def acc = sh (script: "${sfdxHome}/sfdx force:data:record:get -s Account -i 0017Q000005CIF9",returnStdout: true)
+    def acc = bat (script: "${sfdxHome}/sfdx force:data:record:get -s Account -i 0017Q000005CIF9",returnStdout: true)
     if (acc!= 0){
     print acc
     } else {
