--- a/JenkinsFile
+++ b/JenkinsFile
@@ -24,7 +24,7 @@ node {
 
 		println rc
 			
-		def acc = bat returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:record:get -s Account -i 0017Q000005CIF9"
+		def acc = bat returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:record:get -s Account -i 0017Q000005CIF9 -u ${HUB_ORG}"
     		if (acc!= 0) { error 'hub org authorization failed' }
 		
 		println acc
