--- a/JenkinsFile
+++ b/JenkinsFile
@@ -24,14 +24,17 @@ node {
             	if (rc != 0) { error 'hub org authorization failed' }
 
 		println rc
-			
+	}
+	stage('Get a record'){		
 		def acc = bat returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:record:get -s Account -i 0017Q000005CIF9 -u ${HUB_ORG}"
     		if (acc!= 0) { error 'hub org authorization failed' }
 		
 		println acc
-	 
-        }
-	}
+	 }
+	 stage('Logut'){
+	 def logoutStatus = bat returnStatus: true, script: "\"${sfdxHome}/sfdx\" force:auth:logout
+	
+	 println logoutStatus
+	 }
+        }	
 }
-
-
