--- a/JenkinsFile
+++ b/JenkinsFile
@@ -32,7 +32,7 @@ node {
 		println acc
 	 }
 	 stage('Logut'){
-	 def logoutStatus = bat returnStatus: true, script: "\"${sfdxHome}/sfdx\" force:auth:logout
+	 def logoutStatus = bat returnStatus: true, script: "\"${sfdxHome}/sfdx\" force:auth:logout"
 	
 	 println logoutStatus
 	 }
