--- a/JenkinsFile
+++ b/JenkinsFile
@@ -32,7 +32,7 @@ node {
 		println acc
 	 }
 	stage('Create a record'){		
-		def con = bat returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:record:create -s Account -v Name="Fuck my Life""
+		def con = bat returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:record:create -s Account -v Name="\'Fuck my Life\'"
 		
 		println con
 	 }	 
