--- a/JenkinsFile
+++ b/JenkinsFile
@@ -18,6 +18,8 @@ node {
     println JWT_KEY_CRED_ID
     }
 
+ withEnv(["HOME=/import"]) {
+
     withCredentials([file(credentialsId: JWT_KEY_CRED_ID, variable: 'jwt_key_file')]) {
         stage('Authorization') {
             	def rc = bat returnStatus: true, script: "\"${sfdxHome}/sfdx\" force:auth:jwt:grant  -u ${HUB_ORG} -f ${jwt_key_file} -i ${CONNECTED_APP_CONSUMER_KEY} --setdefaultusername"
@@ -31,7 +33,7 @@ node {
 		println acc
 	 }
 	stage('Update file'){		
-		def con = bat returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s Account -f 'Account.csv' -i Id"
+		def con = bat returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s Account -f $HOME/Account.csv -i Id"
 		
 		println con
 	 }	 
@@ -41,4 +43,5 @@ node {
 	 	println logoutStatus
 	 }
         }	
+}
 }
