--- a/JenkinsFile
+++ b/JenkinsFile
@@ -18,8 +18,13 @@ node {
     println JWT_KEY_CRED_ID
     }
 
- withEnv(["HOME=/import"]) {
-
+        stage('Load the variables') {
+            steps {
+                script{
+                PROV_LIST = ""
+                PROV_LIST = load 'Account.csv'
+                }
+            }
     withCredentials([file(credentialsId: JWT_KEY_CRED_ID, variable: 'jwt_key_file')]) {
         stage('Authorization') {
             	def rc = bat returnStatus: true, script: "\"${sfdxHome}/sfdx\" force:auth:jwt:grant  -u ${HUB_ORG} -f ${jwt_key_file} -i ${CONNECTED_APP_CONSUMER_KEY} --setdefaultusername"
@@ -33,7 +38,7 @@ node {
 		println acc
 	 }
 	stage('Update file'){		
-		def con = bat returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s Account -f $HOME/Account.csv -i Id"
+		def con = bat returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s Account -f PROV_LIST -i Id"
 		
 		println con
 	 }	 
@@ -43,5 +48,5 @@ node {
 	 	println logoutStatus
 	 }
         }	
-}
+
 }
