--- a/JenkinsFile
+++ b/JenkinsFile
@@ -21,7 +21,7 @@ node {
         stage('Load the variables') {
                 script{
                 PROV_LIST = ""
-                PROV_LIST = readFile (file: 'Account.csv')
+                PROV_LIST = readFile (file: 'src/Account.csv')
                 }
             }
     withCredentials([file(credentialsId: JWT_KEY_CRED_ID, variable: 'jwt_key_file')]) {
