--- a/JenkinsFile
+++ b/JenkinsFile
@@ -18,12 +18,6 @@ node {
     println JWT_KEY_CRED_ID
     }
 
-        stage('Load the variables') {
-                script{
-		git 'https://github.com/fttra/devOpsSFDX.git/'
-                PROV_LIST = load 'Account.csv'
-                }
-            }
     withCredentials([file(credentialsId: JWT_KEY_CRED_ID, variable: 'jwt_key_file')]) {
         stage('Authorization') {
             	def rc = bat returnStatus: true, script: "\"${sfdxHome}/sfdx\" force:auth:jwt:grant  -u ${HUB_ORG} -f ${jwt_key_file} -i ${CONNECTED_APP_CONSUMER_KEY} --setdefaultusername"
@@ -37,7 +31,7 @@ node {
 		println acc
 	 }
 	stage('Update file'){		
-		def con = bat returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s Account -f PROV_LIST -i Id"
+		def con = bat returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s Account -f Account.csv -i Id"
 		
 		println con
 	 }	 
