--- a/JenkinsFile
+++ b/JenkinsFile
@@ -34,7 +34,7 @@ node {
 
         println dir /s
 
-		def con = bat returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s Account -f C:\personal-repo\devOpsSFDX -i Id -u ${HUB_ORG}"
+		def con = bat returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s Account -f \'C:\personal-repo\devOpsSFDX\' -i Id -u ${HUB_ORG}"
 		
 		println con
 	 }	 
