--- a/JenkinsFile
+++ b/JenkinsFile
@@ -32,7 +32,7 @@ node {
 	 } */
 	stage('Update file'){	
 
-        println dir /s
+        println dir
 
 		def con = bat returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s Account -f C:/personal-repo/devOpsSFDX/ -i Id -u ${HUB_ORG}"
 		
