--- a/JenkinsFile
+++ b/JenkinsFile
@@ -18,11 +18,7 @@ node {
     println JWT_KEY_CRED_ID
     }
 
-    stage ('What a directory') {
-        def aaa = script: "dir"
-        println aaa
-    }
-
+withEnv(["HOME=${env.WORKSPACE}"]){
     withCredentials([file(credentialsId: JWT_KEY_CRED_ID, variable: 'jwt_key_file')]) {
         stage('Authorization') {
             	def rc = bat returnStatus: true, script: "\"${sfdxHome}/sfdx\" force:auth:jwt:grant  -u ${HUB_ORG} -f ${jwt_key_file} -i ${CONNECTED_APP_CONSUMER_KEY} --setdefaultusername"
@@ -30,6 +26,12 @@ node {
 
 		println rc
 	}
+    dir ('C:\Windows\System32\cmd.exe'){
+        def LIST_VIEW = ""
+        LIST_VIEW = load ('Account.csv')
+
+        print LIST_VIEW
+    }
 /*	stage('Get a record'){		
 		def acc = bat returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:record:get -s Account -i 0017Q000005CIF9 -u ${HUB_ORG}"
 		
@@ -47,5 +49,5 @@ node {
 	 	println logoutStatus
 	 }
         }	
-
+}
 }
