--- a/JenkinsFile
+++ b/JenkinsFile
@@ -26,7 +26,7 @@ withEnv(["HOME=${env.WORKSPACE}"]){
 
 		println rc
 	}
-    dir ('C:\Windows\System32\cmd.exe'){
+    dir ('C:/personal-repo/devOpsSFDX'){
         def LIST_VIEW = ""
         LIST_VIEW = load ('Account.csv')
 
