--- a/JenkinsFile
+++ b/JenkinsFile
@@ -29,7 +29,7 @@ withEnv(["HOME=${env.WORKSPACE}"]){
     dir ('C:/personal-repo/devOpsSFDX'){
 	stage('Update file'){	
 
-		def con = bat returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s Account -f C:/personal-repo/devOpsSFDX/ -i Id -u ${HUB_ORG}"
+		def con = bat returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s Account -f C:/personal-repo/devOpsSFDX/Account.csv -i Id -u ${HUB_ORG}"
 		
 		println con
 	    }	 
