--- a/JenkinsFile
+++ b/JenkinsFile
@@ -32,12 +32,14 @@ withEnv(["HOME=${env.WORKSPACE}"]){
 		def con = bat returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s Account -f C:/personal-repo/devOpsSFDX/Account.csv -i Id -u ${HUB_ORG}"
 		
 		println con
-	    }	 
+    }
+    dir ("${HOME}"){
 	 stage('Logut'){
 	 	def logoutStatus = bat returnStatus: true, script: "\"${sfdxHome}/sfdx\" force:auth:logout"
 
 	 	println logoutStatus
 	    }
+    }
     }	
 }
 }
