--- a/JenkinsFile
+++ b/JenkinsFile
@@ -26,7 +26,7 @@ withEnv(["HOME=${env.WORKSPACE}"]){
 
 		println rc
 	}
-    dir ('C:\personal-repo\devOpsSFDX\import'){
+    dir ('C:/personal-repo/devOpsSFDX/import'){
 	stage('Update file'){	
 
 		def con = bat returnStdout: true, script: "\"${sfdxHome}/sfdx\" force:data:bulk:upsert -s Account -f Account.csv -i Id -u ${HUB_ORG}"
