--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,4 +1,4 @@
-@Library('Jenkinstools@master')
+//@Library('Jenkinstools@master')
 node {
     def sfdxHome = tool 'sfdx'
     def devHubName = "${params.Environment}"
