--- a/JenkinsFile
+++ b/JenkinsFile
@@ -5,9 +5,13 @@ node {
     def sandboxName = env.SANDBOX_NAME
 
     //credential folder
+    stage ('Get credentials'){
+    checkout([$class: 'GitSCM', branches: [[name: '*/main']], extensions: [[$class: 'CleanBeforeCheckout']], userRemoteConfigs: [[url: 'https://github.com/fttra/devOpsSFDX.git']]])
     def resource = libraryResource resource: 'readFile-config.yml'
     println(resource)
     def config = readYaml text: resource
+    }
+
 
 
     //username
