--- a/resources/readFile-config.yml
+++ b/resources/readFile-config.yml
@@ -2,15 +2,15 @@ credentials:
   Env1:
     server_url: "https://curious-koala-cek3d-dev-ed.my.salesforce.com"
     username: "teter.filip@curious-koala-cek3d.com"
-    connapp_consumerkey_id: "3MVG9t0sl2P.pByrJ6kTCngdcclx5gQfciwPT7m_GZHS91LygANWBCup62RFC2KH_T8TTtbxiIbVx1M67y9Rl"
-    cred_id: "e34e098b-73bb-4c92-aaa3-d1feb4f6cd66"
+    connapp_consumerkey_id: "connectedAppConsumerKey"
+    cred_id: "server.key"
   Env2:
     server_url: "https://curious-koala-cek3d-dev-ed.my.salesforce.com"
     username: "teter.filip@curious-koala-cek3d.com"
-    connapp_consumerkey_id: "3MVG9t0sl2P.pByrJ6kTCngdcclx5gQfciwPT7m_GZHS91LygANWBCup62RFC2KH_T8TTtbxiIbVx1M67y9Rl"
-    cred_id: "e34e098b-73bb-4c92-aaa3-d1feb4f6cd66"
+    connapp_consumerkey_id: "connectedAppConsumerKey"
+    cred_id: "server.key"
   Env3:
     server_url: "https://curious-koala-cek3d-dev-ed.my.salesforce.com"
     username: "teter.filip@curious-koala-cek3d.com"
-    connapp_consumerkey_id: "3MVG9t0sl2P.pByrJ6kTCngdcclx5gQfciwPT7m_GZHS91LygANWBCup62RFC2KH_T8TTtbxiIbVx1M67y9Rl"
-    cred_id: "e34e098b-73bb-4c92-aaa3-d1feb4f6cd66"
+    connapp_consumerkey_id: "connectedAppConsumerKey"
+    cred_id: "server.key"
